# thetower-main

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: cog_design.md  private_cog_deployment.md  production_environment.md  supervisor_worker.md
scripts/: setup_private_package.py
src/thetower/backend/: env_config.py
src/thetower/backend/backup/: db_backup.py  service.py
src/thetower/backend/tourney_results/: admin.py  constants.py  tourney_utils.py
src/thetower/backend/tourney_results/import/: import_live_results.py  import_results.py
src/thetower/backend/tourney_results/management/commands/: update_battle_conditions.py
src/thetower/web/: discord_bot.py  pages.py  util.py
src/thetower/web/admin/: access_log.py  access_log_stats.py  backup_status.py  bc_mismatch.py  codebase_status.py  migrations.py  package_updates.py  service_status.py  sus_moderation.py
src/thetower/web/historical/: comparison.py  overview.py  player.py
src/thetower/web/live/: bcs.py  data_ops.py  live_bracket.py  live_bracket_analysis.py  live_placement_analysis.py  live_progress.py  live_results.py  ui_components.py
src/thetower/web/static/styles/: style.css
