[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "thetower"
dynamic = ["version"]
description = "The Tower tournament results and Discord bot system"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "TheDisasterFish"}
]
classifiers = [
    "Private :: thetower-project",
    "Private :: thetower.main",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core shared runtime (used by more than one area)
    "Django==5.2.12",
    "pydantic==2.12.5",
    "boto3==1.37.37",
    "schedule==1.2.2",
]

[project.optional-dependencies]
web = [
    "streamlit==1.54.0",
    "streamlit-extras==0.6.0",
    "plotly==6.5.2",
    "pandas==2.3.3",
    # Backend / admin plugins and utilities (kept in web so prod installs web+bot include them)
    "requests==2.32.5",
    "django-extensions==4.1",
    "django-nested-admin==4.1.6",
    "django-simple-history==3.11.0",
    "djangorestframework==3.16.1",
    "whitenoise==6.12.0",
    "django-colorfield==0.14.0",
    "django-axes==8.3.1",
    "anthropic==0.84.0",
    "tqdm==4.67.3",
]

dev = [
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "pytest-sugar==1.1.1",
    "black==26.1.0",
    "isort==8.0.1",
    "flake8==7.3.0",
    "autoflake==2.3.3",
]

[project.urls]
Homepage = "https://thetower.lol"
Repository = "https://github.com/ndsimpson/thetower.lol"
Issues = "https://github.com/ndsimpson/thetower.lol/issues"

[project.scripts]
thetower-web = "thetower.web.pages:main"
thetower-init-streamlit = "thetower.scripts.setup_streamlit:main"
thetower-backup = "thetower.backend.backup.service:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["thetower*"]
exclude = ["tests*", "*.tests*", "*.tests.*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml", "*.json"]

# Tool configurations consolidated
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "thetower.backend.towerdb.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests", "thetower", "components"]
addopts = "-v --tb=short"

[tool.black]
line-length = 150
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 150
multi_line_output = 3
known_first_party = ["thetower"]
src_paths = ["src"]
honor_noqa = true
remove_redundant_aliases = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 150
extend-ignore = ["E203", "E266", "E402", "E501", "W503", "DJ01"]
exclude = [
    ".git",
    "__pycache__",
    "*/__init__.py",
    "migrations",
    "*/migrations/*",
    "**/migrations/**",
    ".venv",
    "build",
    "dist"
]

[tool.autopep8]
max_line_length = 150
exclude = [
    "src/thetower/backend/tourney_results/import/import_results.py",
    "src/thetower/backend/tourney_results/import/get_results.py",
    "src/thetower/backend/tourney_results/import/get_limited_results.py"
]

[tool.setuptools_scm]
write_to = "src/thetower/_version.py"
